Update privacy policy link to local file

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </p>
 
       <ul class="list-disc ml-6">
-        <li><a class="text-blue-600 underline" href="https://sites.google.com/view/skycursor-privacy-policy/accueil">Privacy policy</a></li>
+        <li><a class="text-blue-600 underline" href="privacy.html">Privacy policy</a></li>
         <li><a class="text-blue-600 underline" href="terms.html">Terms of use</a></li>
       </ul>
     </section>
